<resources>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="app_name">Cardline</string>
    <string name="application_name">Cardline</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="gcm_defaultSenderId">1025119648299</string>
    <string name="project_number">1025119648299</string>
    <string name="api_key">AIzaSyDDIlBLdMMtv9Z_GV3tgaoHxiP3OFtMndA</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_password">Create Password</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="agree_to_terms">By registering you are agreeing to our terms and conditions and privacy policy</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="action_settings">Settings</string>
    <string name="email_verification">Email Verification</string>
    <string name="fill_confirm_code_remind">An email has sent to your email with one-time password, please fill in below.</string>
    <string name="submit">SUBMIT</string>
    <string name="resend">RESEND</string>
    <string name="cd_logo">logo</string>
    <string name="signing_in">Signing in…</string>
    <string name="signing_in_chat">Signing in chat...</string>
    <string name="your_name_and_mobile">Your Name and Mobile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_mandatory">First Name *</string>
    <string name="last_name_mandatory">Last Name *</string>
    <string name="mobile">Mobile</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="sign_in_camel">Sign In</string>
    <string name="phone_login">Phone Login</string>
    <string name="cardline_friends">Cardline Friends</string>
    <string name="search_hint">Search…</string>
    <string name="title_cards">Cards</string>
    <string name="title_chats">Chats</string>
    <string name="title_disscovery">Discovery</string>
    <string name="title_me">Me</string>
    <string name="friend_request">Friend Requests</string>
    <string name="friend_recommendation">Friend Recommendation</string>
    <string name="title_share_card">Share Card</string>
    <string name="catalogue">Catalogue</string>
    <string name="catalogue_business">Business Time</string>
    <string name="catalogue_personal">Personal Time</string>
    <string name="title_add_friend">Add a Name Card/Friend</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="add_a_name_card">Add a Name Card</string>
    <string name="search_by_name">Search</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="import_from_contact">Import from phone contacts</string>
    <string name="scan_name_card">Scan Name Card</string>
    <string name="manually_create">Manually Create</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Settings</string>
    <string name="display_name">%s %s</string>
    <string name="connect">Connect</string>
    <string name="user_profile">User Profile</string>
    <string name="status_none">none</string>
    <string name="status_friend">friend</string>
    <string name="status_pending">pending</string>
    <string name="request_sent">Request Sent</string>
    <string name="friend_added">Added</string>
    <string name="friend_reject">reject</string>
    <string name="friend_accept">accept</string>
    <string name="empty_string"> </string>
    <string name="no_friend_request">There are no friend requests</string>
    <string name="location">Location</string>
    <string name="industry">Industry</string>
    <string name="industry_required">Industry *</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="name_cards">Name Cards</string>
    <string name="name_card">Name card</string>
    <string name="add_new_member">Add a new member</string>
    <string name="add">Add</string>
    <string name="contact_info">CONTACT INFO</string>
    <string name="email">Email</string>
    <string name="qr_code">QR Code</string>
    <string name="trace">JOB</string>
    <string name="show_details">Show Details</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="more_profile_info">More profile information</string>
    <string name="group">Group</string>
    <string name="set_remark">Set remarks</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="please_input_your_remark">Please input your remark</string>
    <string name="save">Save</string>
    <string name="remark">Remark</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="sure_to_delete">Are you sure to delete %s?</string>
    <string name="clear">Clear</string>
    <string name="friend_from_contact">Friends From Contact</string>
    <string name="edit_name_card">Edit Name Card</string>
    <string name="your_name">YOUR NAME *</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="qualification_nocap">Qualification</string>
    <string name="your_role">YOUR ROLE *</string>
    <string name="your_company">YOUR COMPANY *</string>
    <string name="your_address">YOUR ADDRESS</string>
    <string name="your_phone">YOUR PHONE</string>
    <string name="mobile1">MOBILE 1</string>
    <string name="mobile2">MOBILE 2</string>
    <string name="did">DID</string>
    <string name="fax">FAX</string>
    <string name="your_email">YOUR EMAIL *</string>
    <string name="website">WEBSITE</string>
    <string name="job_description">JOB DESCRIPTION</string>
    <string name="preview">Preview</string>
    <string name="media">MEDIA</string>
    <string name="affiliates_logo">AFFILIATES LOGO</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="choose_card_background">Choose Card Background</string>
    <string name="sign_in_chat_fail">Failed to Sign In Chat Server!</string>
    <string name="sign_up_chat_fail">Failed to Sign Up on Chat Server!</string>
    <string name="reload">Reload</string>
    <string name="loading">Loading...</string>
    <string name="display_tel">Tel: %s</string>
    <string name="display_mobile1">Mobile 1: %s</string>
    <string name="display_mobile2">Mobile 2: %s</string>
    <string name="display_did">DID: %s</string>
    <string name="display_fax">FAX: %s</string>
    <string name="display_job_status">%s at %s</string>
    <string name="display_name_and_created_date">%s </string>
    <string name="created_on">| Created on</string>
    <string name="description">DESCRIPTION</string>
    <string name="cardline">Cardline</string>
    <string name="scan_method">Scan Method</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="select_industry">Select Industry</string>
    <string name="select_country">Select Country</string>
    <string name="send">Send</string>
    <string name="just_now">Just now</string>
    <string name="yesterday">yesterday</string>
    <string name="tomorrow">tomorrow</string>
    <string name="today">today</string>
    <string name="groups">Groups</string>
    <string name="group_name">Group name</string>
    <string name="create">Create</string>
    <string name="create_group">Create Group</string>
    <string name="select_contact_cards">Select Contacts/Cards</string>
    <string name="update">Update</string>
    <string name="delete_group">Delete Group</string>
    <string name="swipe_to_delete">Swipe left to delete</string>
    <string name="title_detail">Details</string>
    <string name="title_catalogue_business">Business Time</string>
    <string name="title_catalogue_personal">Personal Time</string>
    <string name="title_catalogue_business_my">My Business Timeline</string>
    <string name="title_catalogue_personal_my">My Timeline</string>
    <string name="title_catalogue_create_post">Post</string>
    <string name="title_share">Share</string>
    <string name="title_tags">Tags</string>
    <string name="title_category">Category</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="empty_command_toast">You cannot execute empty command</string>
    <string name="start_typing">Start typing</string>
    <string name="title_chat">Chats</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="summary_info">Summary Info</string>
    <string name="job">Job</string>
    <string name="job_role">JOB ROLE *</string>
    <string name="company_name">COMPANY NAME *</string>
    <string name="detailed_address">DETAILED ADDRESS</string>
    <string name="tel_number">TEL NUMBER</string>
    <string name="company_email">COMPANY EMAIL *</string>
    <string name="product_service"><![CDATA[PRODUCTS & SERVICES]]></string>
    <string name="edit_job">Edit Job</string>
    <string name="create_job">Create Job</string>
    <string name="start_date">START DATE *</string>
    <string name="to">To</string>
    <string name="end_date">END DATE</string>
    <string name="i_currently_work_here">I currently work here</string>
    <string name="delete_job">Delete Job</string>
    <string name="my_name_card">My Name Cards</string>
    <string name="alert_no_job">No jobs available for creating name cards</string>
    <string name="warn_delete_job">Do you want to delete this job?</string>
    <string name="chat_audio">[Audio]</string>
    <string name="chat_attachment">[Attachment]</string>
    <string name="chat_video">[Video]</string>
    <string name="chat_location">[Location]</string>
    <string name="chat_credit">[Credit]</string>
    <string name="chat_gift">[Gift]</string>
    <string name="chat_image">[Image]</string>
    <string name="title_select_friends">Select Friends</string>
    <string name="title_select_friends_groups">Select Friends/Groups</string>
    <string name="title_broadcast">Broadcast</string>
    <string name="title_broadcast_detail">Broadcast Detail</string>
    <string name="title_group_detail">Group Detail</string>
    <string name="warn_broadcast_group_member">Your broadcast group should contain at least one member</string>
    <string name="credit_status_check_out">Check it out!</string>
    <string name="credit_status_refunded">Refunded</string>
    <string name="credit_status_accepted">Accepted</string>
    <string name="warn_refund">Refunded to payer if it’s not accepted in 1day(s).</string>
    <string name="credit_des_sender_on_hold">Awaiting Receipt</string>
    <string name="credit_des_refund">Credit Refunded</string>
    <string name="credit_des_transfer_accept">Transfer Accepted</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="x">X</string>
    <string name="quantity">quantity</string>
    <string name="amount_to_pay">amount to pay</string>
    <string name="make_payment">make payment</string>
    <string name="refunded_to_payer_if_it_s_not_accepted_in_1_day_s">Refunded to payer if it\'s not accepted in 1 day(s)</string>
</resources>