<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/cardline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewScanMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/scan_method"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toTopOf="@+id/buttonTakePhoto" />

        <Button
            android:id="@+id/buttonTakePhoto"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/take_a_photo"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkBlue"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewScanMethod" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toTopOf="@+id/buttonChooseFromGallery" />

        <Button
            android:id="@+id/buttonChooseFromGallery"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/choose_from_gallery"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkBlue"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTakePhoto" />
    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/buttonCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_button"
        android:fontFamily="@font/open_sans"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkBlue"
        android:textSize="@dimen/text_17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContainer" />

</android.support.constraint.ConstraintLayout>
