<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


        <variable
            name="viewmodel"
            type="com.user.ncard.ui.landing.inputinfo.InputInfoViewModel" />

        <variable
            name="user"
            type="com.user.ncard.vo.User" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.user.ncard.ui.landing.inputinfo.InputInfoFragment">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/your_name_and_mobile"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/first_name"
            android:paddingEnd="@dimen/space_16dp"
            android:paddingStart="@dimen/space_16dp"
            android:text="@={viewmodel.firstName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/last_name"
            android:paddingEnd="@dimen/space_16dp"
            android:paddingStart="@dimen/space_16dp"
            android:text="@={viewmodel.lastName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:paddingEnd="@dimen/space_16dp"
            android:paddingStart="@dimen/space_16dp"
            android:text="@={viewmodel.mobile}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner_button"
            android:enabled="@{viewmodel.showProgress==false? true:false}"
            android:fontFamily="@font/open_sans_bold"
            android:letterSpacing="0.15"
            android:onClick="@{() -> viewmodel.update(user.id)}"
            android:text="@string/submit"
            android:textColor="@color/colorDarkWhite"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMobile" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/space_24dp"
            android:layout_height="@dimen/space_24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            android:elevation="@dimen/space_2dp"
            android:visibility="@{viewmodel.showProgress==false? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toEndOf="@+id/buttonSubmit"
            app:layout_constraintTop_toTopOf="@+id/buttonSubmit" />

        <TextView
            android:id="@+id/buttonSkipForNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:enabled="@{viewmodel.showProgress==false? true:false}"
            android:fontFamily="@font/open_sans"
            android:text="@string/skip_for_now"
            android:textColor="@{viewmodel.showProgress==false? @color/colorDarkerBlue: @color/colorDarkGrey}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />
    </android.support.constraint.ConstraintLayout>
</layout>
