<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.user.ncard.ui.landing.landing.LandingPageViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/bg_blue"
        tools:context="com.user.ncard.ui.landing.landing.LandingPageFragment">

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/rounded_corner_button"
            android:fontFamily="@font/open_sans_bold"
            android:letterSpacing="0.15"
            android:onClick="@{() -> viewmodel.createNewAccount()}"
            android:text="@string/create_account"
            android:textColor="@color/colorDarkWhite"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:contentDescription="@string/cd_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/space_16dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/buttonCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorDarkWhite"
                android:textSize="@dimen/text_15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans"
                android:onClick="@{() -> viewmodel.signIn()}"
                android:text="@string/sign_in"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/text_15sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
